@@ -3,79 +3,120 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
- *
+ * SPDX-License-Identifier: MPL-2.0
  */
-
 package com.powsybl.metrix.mapping;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Range;
 import com.powsybl.iidm.network.Identifiable;
 import com.powsybl.iidm.network.Network;
-import com.powsybl.timeseries.*;
+import com.powsybl.metrix.commons.MappingVariable;
+import com.powsybl.metrix.commons.observer.DefaultTimeSeriesMapperObserver;
+import com.powsybl.metrix.commons.observer.TimeSeriesMapperObserver;
+import com.powsybl.metrix.mapping.config.TimeSeriesMappingConfig;
+import com.powsybl.metrix.mapping.config.TimeSeriesMappingConfigLoader;
+import com.powsybl.metrix.mapping.config.TimeSeriesMappingConfigTableLoader;
+import com.powsybl.metrix.mapping.exception.TimeSeriesMappingException;
+import com.powsybl.metrix.mapping.references.NumberDistributionKey;
+import com.powsybl.metrix.mapping.utils.MappingTestNetwork;
+import com.powsybl.timeseries.ReadOnlyTimeSeriesStore;
+import com.powsybl.timeseries.ReadOnlyTimeSeriesStoreCache;
+import com.powsybl.timeseries.RegularTimeSeriesIndex;
+import com.powsybl.timeseries.TimeSeries;
+import com.powsybl.timeseries.TimeSeriesException;
+import com.powsybl.timeseries.TimeSeriesFilter;
+import com.powsybl.timeseries.TimeSeriesIndex;
 import com.powsybl.timeseries.ast.FloatNodeCalc;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.threeten.extra.Interval;
 
+import java.io.BufferedWriter;
+import java.io.ByteArrayInputStream;
+import java.io.StringWriter;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.TreeSet;
 
-import static org.junit.Assert.assertEquals;
+import static com.powsybl.commons.test.ComparisonUtils.assertTxtEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class TimeSeriesMapperTest {
-
-    public enum OtherVariable implements MappingVariable {
-        OTHER_VARIABLE_1("otherVariable1");
-
-        static final String NAME = "other";
-
-        static String getName() {
-            return NAME;
-        }
-
-        @Override
-        public String getFieldName() {
-            return getName();
-        }
-
-        private final String variable;
-
-        OtherVariable(String variable) {
-            this.variable = variable;
-        }
-
-        @Override
-        public String getVariableName() {
-            return variable;
-        }
-    }
+/**
+ * @author Paul Bui-Quang {@literal <paul.buiquang at rte-france.com>}
+ */
+class TimeSeriesMapperTest {
 
     private Network network;
 
-    private MappingParameters mappingParameters = MappingParameters.load();
+    private final MappingParameters mappingParameters = MappingParameters.load();
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    void setUp() {
         // create test network
         network = MappingTestNetwork.create();
     }
 
     @Test
-    public void mappingTest() throws Exception {
+    void testLogEmptyFilter() throws Exception {
+
+        // create time series space mock
+        TimeSeriesIndex index = RegularTimeSeriesIndex.create(Interval.parse("2015-01-01T00:00:00Z/2015-07-20T00:00:00Z"), Duration.ofDays(200));
+        ReadOnlyTimeSeriesStore store = new ReadOnlyTimeSeriesStoreCache(
+            TimeSeries.createDouble("equipment_ts", index, 1d, 2d),
+            TimeSeries.createDouble("other_ts", index, 2d, 2d)
+        );
+
+        // create mapping config
+        TimeSeriesMappingConfig mappingConfig = new TimeSeriesMappingConfig(network);
+        TimeSeriesMappingConfigLoader loader = new TimeSeriesMappingConfigLoader(mappingConfig, store.getTimeSeriesNames(new TimeSeriesFilter()));
+        loader.addEquipmentMapping(MappableEquipmentType.LOAD, "equipment_ts", null, NumberDistributionKey.ONE, EquipmentVariable.P0);
+        loader.addEquipmentTimeSeries("other_ts", OtherVariable.OTHER_VARIABLE, "L1");
+
+        // create mapper
+        TimeSeriesMappingLogger logger = new TimeSeriesMappingLogger();
+        TimeSeriesMapperParameters parameters = new TimeSeriesMapperParameters(new TreeSet<>(Collections.singleton(1)),
+            Range.closed(0, 0), false, false, true, mappingParameters.getToleranceThreshold());
+        TimeSeriesMapper mapper = new TimeSeriesMapper(mappingConfig, parameters, network, logger);
+
+        // Observer
+        List<TimeSeriesMapperObserver> observersList = List.of(new DefaultTimeSeriesMapperObserver());
+
+        // When not ignoring empty filters
+        TimeSeriesMappingException exception = assertThrows(TimeSeriesMappingException.class, () -> mapper.mapToNetwork(store, observersList));
+        assertEquals("Impossible to scale down 1 of ts equipment_ts to empty equipment list", exception.getMessage());
+
+        // Create mapper
+        parameters = new TimeSeriesMapperParameters(new TreeSet<>(Collections.singleton(1)),
+            Range.closed(0, 0), false, true, true, mappingParameters.getToleranceThreshold());
+        TimeSeriesMapper mapperIgnoring = new TimeSeriesMapper(mappingConfig, parameters, network, logger);
+
+        // When ignoring empty filters
+        mapperIgnoring.mapToNetwork(store, observersList);
+        StringWriter writer = new StringWriter();
+        try (BufferedWriter bufferedWriter = new BufferedWriter(writer)) {
+            logger.writeCsv(bufferedWriter, ZoneId.of("UTC"));
+            bufferedWriter.flush();
+            assertTxtEquals(Objects.requireNonNull(getClass().getResourceAsStream("/expected/nonIgnoredEmptyFilterLog.csv")), new ByteArrayInputStream(writer.toString().getBytes(StandardCharsets.UTF_8)));
+        }
+    }
+
+    @Test
+    void mappingTest() {
 
         List<String> equipmentTimeSeriesNames = new ArrayList<>();
-        List<Identifiable> equipmentIds = new ArrayList<>();
+        List<Identifiable<?>> equipmentIds = new ArrayList<>();
         List<Double> equipmentValues = new ArrayList<>();
         List<String> equipmentVariables = new ArrayList<>();
 
         List<String> otherTimeSeriesNames = new ArrayList<>();
-        List<Identifiable> otherIds = new ArrayList<>();
+        List<Identifiable<?>> otherIds = new ArrayList<>();
         List<Double> otherValues = new ArrayList<>();
         List<String> otherVariables = new ArrayList<>();
 
@@ -88,19 +129,20 @@ public class TimeSeriesMapperTest {
 
         // create mapping config
         TimeSeriesMappingConfig mappingConfig = new TimeSeriesMappingConfig(network);
-        mappingConfig.addEquipmentMapping(MappableEquipmentType.LOAD, "equipment_ts", "LD2", NumberDistributionKey.ONE, EquipmentVariable.p0);
-        mappingConfig.addEquipmentTimeSeries("other_ts", OtherVariable.OTHER_VARIABLE_1, "L1");
+        TimeSeriesMappingConfigLoader loader = new TimeSeriesMappingConfigLoader(mappingConfig, store.getTimeSeriesNames(new TimeSeriesFilter()));
+        loader.addEquipmentMapping(MappableEquipmentType.LOAD, "equipment_ts", "LD2", NumberDistributionKey.ONE, EquipmentVariable.P0);
+        loader.addEquipmentTimeSeries("other_ts", OtherVariable.OTHER_VARIABLE, "L1");
 
         // create mapper
         TimeSeriesMappingLogger logger = new TimeSeriesMappingLogger();
-        TimeSeriesMapper mapper = new TimeSeriesMapper(mappingConfig, network, logger);
         TimeSeriesMapperParameters parameters = new TimeSeriesMapperParameters(new TreeSet<>(Collections.singleton(1)),
                 Range.closed(0, 0), false, false, true, mappingParameters.getToleranceThreshold());
+        TimeSeriesMapper mapper = new TimeSeriesMapper(mappingConfig, parameters, network, logger);
 
         // launch TimeSeriesMapper test
         TimeSeriesMapperObserver observer = new DefaultTimeSeriesMapperObserver() {
             @Override
-            public void timeSeriesMappedToEquipment(int point, String timeSeriesName, Identifiable identifiable, MappingVariable variable, double equipmentValue) {
+            public void timeSeriesMappedToEquipment(int point, String timeSeriesName, Identifiable<?> identifiable, MappingVariable variable, double equipmentValue) {
                 if (variable instanceof EquipmentVariable) {
                     equipmentTimeSeriesNames.add(timeSeriesName);
                     equipmentIds.add(identifiable);
@@ -114,23 +156,23 @@ public class TimeSeriesMapperTest {
                 }
             }
         };
-        mapper.mapToNetwork(store, parameters, ImmutableList.of(observer));
+        mapper.mapToNetwork(store, List.of(observer));
 
         assertEquals(1, equipmentTimeSeriesNames.size());
-        assertEquals(ImmutableList.of("equipment_ts"), equipmentTimeSeriesNames);
-        assertEquals(ImmutableList.of(network.getIdentifiable("LD2")), equipmentIds);
-        assertEquals(ImmutableList.of(1.0), equipmentValues);
-        assertEquals(ImmutableList.of("p0"), equipmentVariables);
+        assertEquals(List.of("equipment_ts"), equipmentTimeSeriesNames);
+        assertEquals(List.of(network.getIdentifiable("LD2")), equipmentIds);
+        assertEquals(List.of(1.0), equipmentValues);
+        assertEquals(List.of("p0"), equipmentVariables);
 
         assertEquals(1, otherTimeSeriesNames.size());
-        assertEquals(ImmutableList.of("other_ts"), otherTimeSeriesNames);
-        assertEquals(ImmutableList.of(network.getIdentifiable("L1")), otherIds);
-        assertEquals(ImmutableList.of(2.0), otherValues);
-        assertEquals(ImmutableList.of("otherVariable1"), otherVariables);
+        assertEquals(List.of("other_ts"), otherTimeSeriesNames);
+        assertEquals(List.of(network.getIdentifiable("L1")), otherIds);
+        assertEquals(List.of(2.0), otherValues);
+        assertEquals(List.of("otherVariable"), otherVariables);
     }
 
     @Test
-    public void goodIndexTest() throws Exception {
+    void goodIndexTest() {
         // create time series space mock
         TimeSeriesIndex index = RegularTimeSeriesIndex.create(Interval.parse("1970-01-01T00:00:00Z/1970-01-02T00:00:00Z"), Duration.ofDays(1));
 
@@ -143,18 +185,16 @@ public class TimeSeriesMapperTest {
         TimeSeriesMappingConfig mappingConfig = new TimeSeriesMappingConfig(network);
 
         mappingConfig.getTimeSeriesNodes().put("calculated", new FloatNodeCalc(10f));
-        mappingConfig.addEquipmentMapping(MappableEquipmentType.LOAD, "calculated", "l1", NumberDistributionKey.ONE, EquipmentVariable.p0);
-        mappingConfig.addEquipmentMapping(MappableEquipmentType.LOAD, "foo", "l2", NumberDistributionKey.ONE, EquipmentVariable.p0);
-        mappingConfig.addEquipmentMapping(MappableEquipmentType.GENERATOR, "bar", "g1", NumberDistributionKey.ONE, EquipmentVariable.targetP);
+        TimeSeriesMappingConfigLoader loader = new TimeSeriesMappingConfigLoader(mappingConfig, store.getTimeSeriesNames(new TimeSeriesFilter()));
+        loader.addEquipmentMapping(MappableEquipmentType.LOAD, "calculated", "l1", NumberDistributionKey.ONE, EquipmentVariable.P0);
+        loader.addEquipmentMapping(MappableEquipmentType.LOAD, "foo", "l2", NumberDistributionKey.ONE, EquipmentVariable.P0);
+        loader.addEquipmentMapping(MappableEquipmentType.GENERATOR, "bar", "g1", NumberDistributionKey.ONE, EquipmentVariable.TARGET_P);
 
-        mappingConfig.checkIndexUnicity(store);
+        new TimeSeriesMappingConfigTableLoader(mappingConfig, store).checkIndexUnicity();
     }
 
-    @Rule
-    public ExpectedException exceptions = ExpectedException.none();
-
     @Test
-    public void wrongIndexTest() throws Exception {
+    void wrongIndexTest() {
         // create time series space mock
         TimeSeriesIndex index1 = RegularTimeSeriesIndex.create(Interval.parse("1970-01-01T00:00:00Z/1970-01-02T00:00:00Z"), Duration.ofDays(1));
         TimeSeriesIndex index2 = RegularTimeSeriesIndex.create(Interval.parse("1970-01-01T00:00:00Z/1970-01-03T00:00:00Z"), Duration.ofDays(2));
@@ -168,12 +208,13 @@ public class TimeSeriesMapperTest {
         TimeSeriesMappingConfig mappingConfig = new TimeSeriesMappingConfig(network);
 
         mappingConfig.getTimeSeriesNodes().put("calculated", new FloatNodeCalc(10f));
-        mappingConfig.addEquipmentMapping(MappableEquipmentType.LOAD, "calculated", "l1", NumberDistributionKey.ONE, EquipmentVariable.p0);
-        mappingConfig.addEquipmentMapping(MappableEquipmentType.LOAD, "foo", "l2", NumberDistributionKey.ONE, EquipmentVariable.p0);
-        mappingConfig.addEquipmentMapping(MappableEquipmentType.GENERATOR, "bar", "g1", NumberDistributionKey.ONE, EquipmentVariable.targetP);
+        TimeSeriesMappingConfigLoader loader = new TimeSeriesMappingConfigLoader(mappingConfig, store.getTimeSeriesNames(new TimeSeriesFilter()));
+        loader.addEquipmentMapping(MappableEquipmentType.LOAD, "calculated", "l1", NumberDistributionKey.ONE, EquipmentVariable.P0);
+        loader.addEquipmentMapping(MappableEquipmentType.LOAD, "foo", "l2", NumberDistributionKey.ONE, EquipmentVariable.P0);
+        loader.addEquipmentMapping(MappableEquipmentType.GENERATOR, "bar", "g1", NumberDistributionKey.ONE, EquipmentVariable.TARGET_P);
 
-        exceptions.expect(TimeSeriesMappingException.class);
-        exceptions.expectMessage("Time series involved in the mapping must have the same index");
-        mappingConfig.checkIndexUnicity(store);
+        TimeSeriesMappingConfigTableLoader timeSeriesMappingConfigTableLoader = new TimeSeriesMappingConfigTableLoader(mappingConfig, store);
+        TimeSeriesException exception = assertThrows(TimeSeriesException.class, timeSeriesMappingConfigTableLoader::checkIndexUnicity);
+        assertTrue(exception.getMessage().contains("Time series involved in the mapping must have the same index"));
     }
 }
